Fix issue: images not showing up on azure page

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -490,7 +490,7 @@
   display: flex;
   flex-direction: column-reverse;
   overflow: auto;
-  background-image: url('src/assets/background-green-mountains-landscape-illustration.jpg');
+  background-image: url('/src/assets/background-green-mountains-landscape-illustration.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -848,7 +848,7 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  background-image: url('src/assets/freepik purple.jpg');
+  background-image: url('/src/assets/freepik purple.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -986,7 +986,7 @@ form .input-container input {
   height: 100%;
   align-items: center;
   justify-content: center;
-  background-image: url('src/assets/freepik purple.jpg');
+  background-image: url('/src/assets/freepik purple.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
